Fixes after kottans students feedback
Fix #1. Added favicon and scrollbar gutter.
Fix #2. Resolved issue with overlapping footer
Fix #3.1 Partially fixed/changed adaptive behaviour
Fix #3.2 Partially fixed/changed dimensions of the nav menu on mobile
Fix #4 Layout changes to paddings/margins, alignings
Refactor #1 Merged onclick zones in one array

--- a/submissions/dmytro-botnarenko/dom-api-task/css/landscape.css
+++ b/submissions/dmytro-botnarenko/dom-api-task/css/landscape.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 461px) and (max-width: 1024px) and (orientation: landscape) {
+@media screen and (min-width: 481px) and (max-width: 1024px) and (max-height: 480px) {
   /* ------------SWITCHER--------------- */
   .switcher {
     width: 4%;
@@ -46,13 +46,14 @@
   /*Menu list*/
   .main__navigation__menu__container {
     top: 0px;
-    width: 380px;
-    padding: 15% 2%;
+    width: 430px;
+    padding: 30px 10px;
   }
   .main__navigation__menu__list {
     display: grid;
     grid-template: auto / 1fr 1fr;
-    column-gap: 2%;
+    column-gap: 10px;
+    row-gap: 6px;
   }
   .main__navigation__menu__list__link {
     font-size: 1.1rem;
@@ -61,47 +62,41 @@
   .main__navigation__menu__list__link {
     margin-bottom: 10px;
   }
-  /* ------------FOOTER--------------- */
-  footer {
-    margin-top: 1%;
-  }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) and (orientation: landscape) {
-  .wrapper {
-    justify-content: space-between;
-  }
-  .main__container {
-    height: 90%;
-  }
-  /* ------------NAVIGATION------------- */
-  .main__navigation__menu input {
-    top: 15px;
-    left: -10px;
-  }
-  /*Hamburger*/
-  .main__navigation__menu__burger {
-    top: 22px;
-  }
-  /*Menu list*/
-  .main__navigation__menu__container {
-    width: 420px;
-  }
-}
-@media screen and (min-width: 769px) and (max-width: 1024px) and (orientation: landscape) and (min-height: 700px) {
+@media screen and (min-width: 481px) and (max-width: 1024px) and (min-height: 481px) and (max-height: 600px) {
   /* ------------SWITCHER--------------- */
   .switcher {
-    top: 20px;
+    width: 3%;
+    top: 30px;
     left: 30px;
   }
   /* -------------MAIN------------------ */
   .main__container {
     padding: 30px;
   }
-  .main__info__personage {
-    width: 100%;
+  .main__info {
+    width: 85%;
+    padding: 0 3% 0 0;
   }
-  .main__info__text {
-    width: 100%;
+  .main__info__personage {
+    flex-direction: row;
+  }
+  .main__info__figure {
+    margin-right: 16px;
+  }
+  .main__info__personage table caption {
+    padding-bottom: 8px;
+  }
+  /* ------------NAVIGATION--------------- */
+
+  .main__navigation__image {
+    max-width: 50%;
+  }
+  .main__navigation__menu__container {
+    padding: 4% 4%;
+  }
+  .main__navigation__menu__list__link {
+    margin-bottom: 7%;
   }
 }
