--- a/submissions/dmytro-botnarenko/dom-api-task/css/medium.css
+++ b/submissions/dmytro-botnarenko/dom-api-task/css/medium.css
@@ -1,10 +1,8 @@
-@media screen and (min-width: 461px) and (max-width: 1024px) and (not (orientation: landscape)) {
+@media screen and (min-width: 481px) and (max-width: 1024px) and (min-height: 601px) {
   /* ------------MAIN--------------- */
   .main__info {
     width: 70%;
-  }
-  .main__info__name {
-    padding: 12px 0;
+    margin-right: 2%;
   }
   .main__info__figure {
     margin: 16px 0;
@@ -14,15 +12,10 @@
     padding-bottom: 8px;
   }
   .main__info__text {
-    padding: 5%;
-    font-size: 1.1rem;
+    padding: 15px 0 0 0;
   }
   /* ------------NAVIGATION--------------- */
 
-  .main__navigation__menu {
-    width: 90%;
-    margin-top: 5%;
-  }
   .main__navigation__menu__container {
     padding: 10% 4%;
   }
